--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "28642289-bd49-4e8a-a961-55f1db0fd80d",
    "metadata": {
     "tags": []
@@ -40,7 +40,9 @@
    "id": "78e86c92-8c57-4b4c-b6a8-1b8246dedf2a",
    "metadata": {},
    "source": [
-    "Update the following constants with your SageMaker Domain Id and User Profile. You can find them in your Amazon SageMaker dashboard under \"Domains\"."
+    "<div class=\"alert alert-info\"><strong>Note:</strong> \n",
+    "    Update the following constants with your SageMaker <strong>Domain Id</strong> and <strong>User Profile</strong>. You can find them in your Amazon SageMaker dashboard under \"Domains\".\n",
+    "</div>"
    ]
   },
   {
@@ -473,12 +475,16 @@
     "* `iam_client`: We'll use a [boto3 IAM Client](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/iam.html) instance to access IAM.\n",
     "* `role`: This is the execution role attached to this notebook. We can use this role with any of the SageMaker services that need it to ensure they run with the appropriate permissions.\n",
     "* `region`: The current region attached to our session. \n",
-    "* `sagemaker_session`: The current SageMaker session."
+    "* `sagemaker_session`: The current SageMaker session.\n",
+    "\n",
+    "<div class=\"alert alert-info\"><strong>Note:</strong> \n",
+    "    Select a unique name for the <strong>BUCKET</strong> constant below.\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b99593fe-d51a-4593-9741-a43a44a2d174",
    "metadata": {
     "tags": []
