--- a/mnist/mnist.ipynb
+++ b/mnist/mnist.ipynb
@@ -1107,7 +1107,7 @@
     "vcpuNum": 96
    }
   ],
-  "instance_type": "ml.m5.large",
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 CPU Optimized)",
    "language": "python",
