--- a/penguins/penguins-endpoint.ipynb
+++ b/penguins/penguins-endpoint.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "09e73d7a-a972-4d75-ae0b-57e69e65580a",
    "metadata": {
     "tags": []
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "7a118412-1ce3-4db1-821a-4e7c73772361",
    "metadata": {
     "tags": []
@@ -54,11 +54,6 @@
     "from sagemaker.serializers import JSONSerializer\n",
     "from sagemaker.deserializers import JSONDeserializer\n",
     "from sagemaker.s3 import S3Uploader, S3Downloader\n",
-    "\n",
-    "\n",
-    "ENDPOINT = \"penguins-endpoint\"\n",
-    "MODEL_PACKAGE_GROUP = \"penguins\"\n",
-    "GROUND_TRUTH_LOCATION = f\"{S3_LOCATION}/monitoring/groundtruth\" \n",
     "\n",
     "\n",
     "def get_predictor(endpoint_name, json_predictor=False):\n",
@@ -583,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "28818214-a9ed-4044-8941-4dfeae6005a4",
    "metadata": {
     "tags": []
@@ -635,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "da5b6bc4-1a85-4f96-ba7d-3ec1c373aa40",
    "metadata": {
     "tags": []
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "bfeac7b4-aebc-489a-b5a0-fc330d4b9174",
    "metadata": {
     "tags": []
@@ -665,6 +660,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Generating 334 predictions...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2136.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2206.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2237.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2307.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2337.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2407.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2438.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2508.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2538.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2609.jsonl...\n",
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2639.jsonl...\n",
       "Generating 334 predictions...\n"
      ]
     }
@@ -714,6 +721,11 @@
       "Generating 334 predictions...\n",
       "Generating 334 predictions...\n",
       "Generating 334 predictions...\n",
+      "Generating 334 predictions...\n",
+      "Generating 334 predictions...\n",
+      "Generating 334 predictions...\n",
+      "Generating 334 predictions...\n",
+      "Generating 334 predictions...\n",
       "Generating 334 predictions...\n"
      ]
     }
@@ -746,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "id": "66e7e493-22a2-4f00-afd8-7547d060ea37",
    "metadata": {
     "tags": []
@@ -767,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "283ce0a7-ca8f-46c0-bcdf-2347b0d2f1fc",
    "metadata": {
     "tags": []
@@ -789,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "d828181f-312d-44a1-8f9f-e4d15a46f9db",
    "metadata": {
     "tags": []
@@ -849,12 +861,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ba5a72f8-5365-4fdb-9603-660d246ff4d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2106.jsonl...\n"
+     ]
+    }
+   ],
    "source": [
-    "predictor = _get_predictor(ENDPOINT)\n",
+    "predictor = get_predictor(ENDPOINT, json_predictor=True)\n",
     "\n",
     "stop_ground_truth_thread, groundtruth_thread = generate_ground_truth_data(\n",
     "    predictor, \n",
@@ -863,8 +883,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c48c349d-b0d0-4c87-947d-d9b985f5505e",
+   "metadata": {},
+   "source": [
+    "### Deleting Resources\n",
+    "\n",
+    "First, let's stop the thread genering traffic."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "6a972500-5650-4225-bfd4-68a9408ef6e3",
    "metadata": {},
    "outputs": [
@@ -872,7 +902,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/07/13/13/0713.jsonl...\n"
+      "Uploading ground truth data to s3://mlschool/penguins/monitoring/groundtruth/2023/08/02/19/2709.jsonl...\n"
      ]
     }
    ],
@@ -880,6 +910,34 @@
     "stop_ground_truth_thread.set()\n",
     "groundtruth_thread.join()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f05bdab3-542c-447c-8d40-2a24beb36e06",
+   "metadata": {},
+   "source": [
+    "Let's now delete the endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ebd98556-2409-44da-b679-89f21452fbbd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "predictor.delete_endpoint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba09f3ac-1d4a-4a9c-8cef-9fdb3f423056",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
