--- a/penguins/penguins-monitoring.ipynb
+++ b/penguins/penguins-monitoring.ipynb
@@ -14,11 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "77cc3eac-251d-4114-ae39-2e2957d8b658",
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import boto3\n",
     "import json\n",
     "import os\n",
@@ -40,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "bd98d8e7-5569-4ace-8f27-103332809ee6",
    "metadata": {
     "tags": []
@@ -48,8 +51,6 @@
    "outputs": [],
    "source": [
     "from constants import *\n",
-    "\n",
-    "ENDPOINT = \"penguins-endpoint\"\n",
     "\n",
     "DATA_QUALITY_LOCATION = f\"{S3_LOCATION}/monitoring/data-quality\"\n",
     "MODEL_QUALITY_LOCATION = f\"{S3_LOCATION}/monitoring/model-quality\""
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "ce7faec8-93a9-4671-8e0f-8f7401f7d8b7",
    "metadata": {
     "tags": []
@@ -1886,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "2b1f84cb-bab9-4ac8-822d-f0d9a763df6a",
    "metadata": {
     "tags": []
@@ -1898,27 +1899,27 @@
        "multiclass_classification_constraints": {
         "accuracy": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9423076923076923
         },
         "weighted_f0_5": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9424061853639318
         },
         "weighted_f1": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9420526423178943
         },
         "weighted_f2": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9420803014553014
         },
         "weighted_precision": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9428571428571428
         },
         "weighted_recall": {
          "comparison_operator": "LessThanThreshold",
-         "threshold": 1
+         "threshold": 0.9423076923076923
         }
        },
        "version": 0
@@ -1927,7 +1928,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -1958,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "c8ec5229-3a5e-4e01-b9bd-b3f81ae79b67",
    "metadata": {
     "tags": []
@@ -1976,13 +1977,8 @@
     "    monitor_schedule_name=\"penguins-model-monitoring-schedule\",\n",
     "    \n",
     "    endpoint_input = EndpointInput(\n",
-    "        endpoint_name=predictor.endpoint_name,\n",
-    "\n",
-    "        # The endpoint returns an attribute `species` with the\n",
-    "        # prediction from the model. That's the attribute we want to\n",
-    "        # use to compare with the groundtruth.\n",
-    "        inference_attribute=\"species\",\n",
-    "\n",
+    "        endpoint_name=ENDPOINT,\n",
+    "        inference_attribute=\"prediction\",\n",
     "        destination=\"/opt/ml/processing/input_data\",\n",
     "    ),\n",
     "    \n",
@@ -1992,7 +1988,7 @@
     "    constraints=f\"{MODEL_QUALITY_LOCATION}/constraints.json\",\n",
     "    \n",
     "    schedule_cron_expression=CronExpressionGenerator.hourly(),\n",
-    "    output_s3_uri=f\"{S3_FILEPATH}/monitoring/model-quality\",\n",
+    "    output_s3_uri=f\"{S3_LOCATION}/monitoring/model-quality\",\n",
     "    enable_cloudwatch_metrics=True,\n",
     ")"
    ]
@@ -2009,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "2642e685-1612-4055-b8f1-c48cb21a05ed",
    "metadata": {
     "tags": []
@@ -2070,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "1ba83468-e877-4359-8207-59070cc6870c",
    "metadata": {
     "tags": []
@@ -2091,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf9f4a1-c9ec-46a1-9aff-e003ebb7347a",
+   "id": "6804acd2-65a3-47c3-b417-7525093d6871",
    "metadata": {},
    "outputs": [],
    "source": []
