--- a/penguins/penguins-setup.ipynb
+++ b/penguins/penguins-setup.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b99593fe-d51a-4593-9741-a43a44a2d174",
    "metadata": {
     "tags": []
@@ -512,6 +512,9 @@
     "S3_LOCATION = f\"s3://{BUCKET}/penguins\"\n",
     "DATA_FILEPATH = Path().resolve() / \"data.csv\"\n",
     "\n",
+    "ENDPOINT = \"penguins-endpoint\"\n",
+    "GROUND_TRUTH_LOCATION = f\"{S3_LOCATION}/monitoring/groundtruth\" \n",
+    "MODEL_PACKAGE_GROUP = \"penguins\"\n",
     "\n",
     "sagemaker_client = boto3.client(\"sagemaker\")\n",
     "iam_client = boto3.client(\"iam\")\n",
