--- a/penguins/penguins-endpoint.ipynb
+++ b/penguins/penguins-endpoint.ipynb
@@ -926,7 +926,29 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.8/threading.py\", line 932, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/local/lib/python3.8/threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"<ipython-input-27-af02a3504fde>\", line 15, in _generate_prediction_data\n",
+      "  File \"<ipython-input-27-af02a3504fde>\", line 5, in _predict\n",
+      "  File \"/usr/local/lib/python3.8/site-packages/sagemaker/base_predictor.py\", line 185, in predict\n",
+      "    response = self.sagemaker_session.sagemaker_runtime_client.invoke_endpoint(**request_args)\n",
+      "  File \"/usr/local/lib/python3.8/site-packages/botocore/client.py\", line 535, in _api_call\n",
+      "    return self._make_api_call(operation_name, kwargs)\n",
+      "  File \"/usr/local/lib/python3.8/site-packages/botocore/client.py\", line 980, in _make_api_call\n",
+      "    raise error_class(parsed_response, operation_name)\n",
+      "botocore.errorfactory.ValidationError: An error occurred (ValidationError) when calling the InvokeEndpoint operation: Endpoint penguins-endpoint of account 325223348818 not found.\n"
+     ]
+    }
+   ],
    "source": [
     "predictor.delete_endpoint()"
    ]
