--- a/penguins/penguins-teardown.ipynb
+++ b/penguins/penguins-teardown.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "ff9e5041-f3be-4fee-aa5b-846f618a185d",
    "metadata": {
     "tags": []
@@ -40,24 +40,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "89ee70a2-c0c1-4167-bb6b-65d620767fdf",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "MODEL_PACKAGE_GROUP = \"sample\""
+    "MODEL_PACKAGE_GROUP = \"penguins\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "212a0538-62b5-4875-a59c-1a4e1a833a07",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting arn:aws:sagemaker:us-east-1:325223348818:model-package/emocional/1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': '3ee0e924-ab64-46cb-ada0-80ea8e5764a4',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '3ee0e924-ab64-46cb-ada0-80ea8e5764a4',\n",
+       "   'content-type': 'application/x-amz-json-1.1',\n",
+       "   'content-length': '0',\n",
+       "   'date': 'Mon, 14 Aug 2023 18:18:20 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for mp in sagemaker_client.list_model_packages(ModelPackageGroupName=MODEL_PACKAGE_GROUP)[\"ModelPackageSummaryList\"]:\n",
     "    print(f\"Deleting {mp['ModelPackageArn']}\")\n",
