Added a section to remove SageMaker Experiments

--- a/penguins/penguins-teardown.ipynb
+++ b/penguins/penguins-teardown.ipynb
@@ -17,6 +17,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "183480a6-e219-454b-a890-debf8ac4aac4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "CODE_FOLDER = Path(\"code\")\n",
+    "sys.path.append(f\"./{CODE_FOLDER}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ff9e5041-f3be-4fee-aa5b-846f618a185d",
    "metadata": {
     "tags": []
@@ -25,7 +41,33 @@
    "source": [
     "import boto3\n",
     "\n",
-    "sagemaker_client = boto3.client(\"sagemaker\")"
+    "from constants import *\n",
+    "from sagemaker.experiments.experiment import Experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c7cbb0b-d961-4bb0-82bb-10ddd2d560a4",
+   "metadata": {},
+   "source": [
+    "## Remove Experiments\n",
+    "\n",
+    "To avoid incurring unnecessary charges, delete the SageMaker Experiment resources you no longer need."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c48f7c4c-c33d-424a-904e-bb49ce95a092",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "EXPERIMENT_NAME = \"tensorfl-ap2uhikoiith-KnMow1gYgw-aws-tuning-job\"\n",
+    "\n",
+    "experiment = Experiment.load(experiment_name=EXPERIMENT_NAME, sagemaker_session=sagemaker_session)\n",
+    "experiment._delete_all(action=\"--force\")"
    ]
   },
   {
@@ -36,18 +78,6 @@
     "## Clean up Model Registry\n",
     "\n",
     "This section deletes every model registered under a specific model group and then it removes the model group."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "89ee70a2-c0c1-4167-bb6b-65d620767fdf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "MODEL_PACKAGE_GROUP = \"penguins\""
    ]
   },
   {
